# RayTracing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  mesh.cpp  mesh.h
Render/: bvh.cpp  bvh.h  render.cpp  render.h  render_structs.h
Render/Render_CPU/: bvh.cpp  bvh.h  render.cpp  render.h  render_structs.h
Render/Render_GPU/: render_gpu.cpp  render_gpu.h
Render/Render_GPU/shaders/: includes.glsl  raytrace.comp.glsl
docs/: example_grid.grid
model_structs/: model.h
structs/: grid.cpp  grid.h  mesh.cpp  mesh.h  octree.cpp  octree.h
